# seaque_solar

./: README.md  SimpleCan.cpp  SimpleCan.h  build  seaque_mppt.kicad_pcb  seaque_mppt.kicad_prl  seaque_mppt.kicad_pro  seaque_mppt.kicad_sch  seaque_solar.ino
analysis/: ISS_2024-01-01_to_2025-01-17.tle  common.py  plot_iv.py  plsb_packets.pkl  plsb_packets.pkl_old
analysis/old/: ISS_11242024_12122024_1m.xlsx  gemini_common.py  plot_dump.py  plot_iv.py  plot_iv_chatgpt.py  plot_iv_gemini.py  plot_iv_grok.py
board/v1/: falstad.txt  falstad_both.txt  falstad_lowside.txt  fp-lib-table  seaque.kicad_pcb  seaque.kicad_sym
board/v1/sim/: circuit.sch
board/v2/: seaque.kicad_pcb  seaque.kicad_sch
board/v3/: fp-lib-table  seaque.kicad_pro  ~seaque.kicad_sch.lck
nano_test/: nano_test.ino
seaque_solar_cube/: .cproject  .gdbinit  .gitignore  .mxproject  .project  CMakeLists.txt  QCB Debug Remote.cfg  QCB Debug Remote.launch  QCB Debug.launch  QCB Release.launch  QCB.ioc  README.md  arm-none-eabi.cmake  array.txt  build.sh  notes.md  notes_on_CAN  openocd.cfg  qcb_debugging.py  solar.pkl  table.tsv
seaque_solar_cube/Core/Inc/: axe_init.h  main.h  seaque-comms.h  stm32l5xx_hal_conf.h  stm32l5xx_it.h
seaque_solar_cube/Core/Src/: axe_init.c  main.c  main.c.back  stm32l5xx_hal_msp.c  stm32l5xx_it.c
seaque_solar_cube/Drivers/: CMakeLists.txt
v1/: falstad_bjt.txt  falstad_solarmodel.txt  seaque.kicad_sch  sym-lib-table
v1/sim/: circuit.dpl
v3/: mods_from_v2.md  seaque.kicad_pcb  seaque.kicad_sch
